WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
96439
jsStringWithCache shouldn't call StringImpl::characters() for single character strings
https://bugs.webkit.org/show_bug.cgi?id=96439
Summary
jsStringWithCache shouldn't call StringImpl::characters() for single characte...
Michael Saboff
Reported
2012-09-11 15:53:45 PDT
This is to fix two FIXME's in jsStringWithCache. // FIXME: we shouldn't invoke StringImpl::characters(). // FIXME: why not just return a SmallStrings when possible?
Attachments
Patch
(2.02 KB, patch)
2012-09-11 15:58 PDT
,
Michael Saboff
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Michael Saboff
Comment 1
2012-09-11 15:58:56 PDT
Created
attachment 163464
[details]
Patch
Geoffrey Garen
Comment 2
2012-09-11 16:07:53 PDT
Comment on
attachment 163464
[details]
Patch r=me
WebKit Review Bot
Comment 3
2012-09-11 16:53:24 PDT
Comment on
attachment 163464
[details]
Patch Clearing flags on attachment: 163464 Committed
r128244
: <
http://trac.webkit.org/changeset/128244
>
WebKit Review Bot
Comment 4
2012-09-11 16:53:27 PDT
All reviewed patches have been landed. Closing bug.
Michael Saboff
Comment 5
2012-09-11 17:26:07 PDT
Additional commit of
r128247
: <
http://trac.webkit.org/changeset/128247
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug