jsStringWithCache shouldn't call StringImpl::characters() for single character strings https://bugs.webkit.org/show_bug.cgi?id=96439

Reviewed by Geoffrey Garen.

Replaced StringImpl->characters()[0] with operator[] access which is character size aware.
Also fixed the other FIXME so we now use SmallStrings to retunr the single character string.

No functional change, so no new tests.

* bindings/js/JSDOMBinding.h:
(WebCore::jsStringWithCache):


Canonical link: https://commits.webkit.org/114336@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@128244 268f45cc-cd09-0410-ab3c-d52691b4dbfc